WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254162
[WebGPU] WGPUTextureFormat_Stencil8 is not depth renderable
https://bugs.webkit.org/show_bug.cgi?id=254162
Summary
[WebGPU] WGPUTextureFormat_Stencil8 is not depth renderable
Mike Wyrzykowski
Reported
2023-03-20 10:01:45 PDT
WGPUTextureFormat_Stencil8 is not depth renderable as MTLPixelFormatStencil8 is not in Metal. We can probably just use MTLPixelFormatX32_Stencil8 in place of MTLPixelFormatStencil8
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-20 10:02:37 PDT
<
rdar://problem/106949583
>
Mike Wyrzykowski
Comment 2
2023-03-20 12:46:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11725
EWS
Comment 3
2023-03-20 22:22:57 PDT
Committed
261907@main
(76b7c6ce160c): <
https://commits.webkit.org/261907@main
> Reviewed commits have been landed. Closing PR #11725 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug