[WebGPU] WGPUTextureFormat_Stencil8 is not depth renderable https://bugs.webkit.org/show_bug.cgi?id=254162 <radar://106949583>

Reviewed by Myles C. Maxfield.

Stencil only formats should not set the depth state.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
(WebGPU::isStencilOnlyFormat):
Add helper.

Canonical link: https://commits.webkit.org/261907@main